chore: add backups on admin panel, resolve sonar issues
